<resources>
    <string name="app_name">Android Muzej</string>
    <string name="muzej_vuka_i_dositeja">МУЗЕЈ ВУКА И ДОСИТЕЈА</string>
    <string name="btnSerbian" translatable="false">српски</string>
    <string name="btnEnglish" translatable="false">english</string>
    <string name="btnTurkish" translatable="false">türk</string>
    <string name="btnFrench" translatable="false">français</string>
    <string name="btnRussian" translatable="false">русский</string>
    <string name="btnGerman" translatable="false">deutsch</string>
    <string name="Sr" translatable="false">sr</string>
    <string name="En" translatable="false">en</string>
    <string name="Tr" translatable="false">tr</string>
    <string name="Fr" translatable="false">fr</string>
    <string name="Ru" translatable="false">ru</string>
    <string name="De" translatable="false">de</string>
    <string name="second_floor_text">спрат</string>
    <string name="first_floor_text">приземље</string>
    <string name="navigacija" translatable="false">Навигација</string>
    <string name="room1Title" >Догађаји у Европи и Србији крајем 18. и почетком 19 века</string>
    <string name="room1page1Title" translatable="false">Историјске околности</string>
    <string-array name="room1Text">
        <item>Историју Европе 18. века су обележиле Револуције и преврати. Те промене се
            нису догађале само на политичком плану, већ су им претходиле идеје коју су
            започели француски просветитељи и енциклопедисти Шарл Монтескје, Дени
            Дидро, Франсоа Волтер и Жан Жак Русо, који су критиком политичког уређења
            државе и цркве инспирисали и иницирали многе промене у тадашњем свету.
            Револуција у Француској, пад Бастиље 14. јула 1789. означио је крај
            апсолутистичке монархије. Народна скупштина је усвојила Декларацију права
            човека и грађанина којом је прокламовано да су сви људи слободни и једнаки у
            правима, да су закони једнаки за све грађане и да суверенитет почива на
            нацији. Укидање феудализма у Француској означило је почетак једног новог
            доба.
        </item>
        <item>
            Новa историјска збивања нису заобишла ни тадашњу Србију. Многобројне
            кризе које су потресале Османско царство утицале су и на догађаје у
            Београдском пашалуку, као једној од управних јединица Царства. Непрестани
            сукоби ескалирали су покретањем устанка 14. фебруара 1804. године у
            Орашцу, месту у Централној Србији. За вођу Првог српског устанка изабран је
            Ђорђе Петровић Карађорђе. Тако је почела Српска револуција која је окончана
            1835. године ослобођењем од Османске власти и укидањем феудализма у
            Србији. Аутономија стечена током Првог и Другог српског устанка нарочито кроз
            хатишерифе, својеручно писане наредбе султана које су морале бити одмах
            извршене (1830. и 1833), као и укидање феудализма, омогућили су Србима у
            Кнежевини Србији политичке и економске слободе и друштвену једнакост.
            Друштвена клима у ослобођеној Србији тражила је и формирање националног
            идентитета чија су упоришта били ново подигнуто Народно позориште и тек
            основани Народни музеј.
        </item>
        <item>
            Током 19. века праве се први кораци ка успостављању грађанског друштва у
            Србији. Полако се одбацују традиције Османског уређења и оснивају се
            институције по узору на европске. Уређују се правни и судски систем
            доношењем Грађанског законика 1844. године, а привреда доношењем Уредбе
            о еснафима 1847. године као и новим пореским системом. У европском духу развијају се позориште и музичка култура, архитектура и мода. Оснивају се
            нове културно-просветне институције: Библиотека Друштва српске
            словесности (1842), библиотеке Лицеја (1844), прва трговачка школа (1844),
            прва женска школа (1846), прва Инжињерска школа у рангу факултета (1846),
            Београдско читалиште (1846), приватне школе на немачком (1847) и грчком
            језику (1848). Интересовање за проучавање прошлости и очување наслеђа
            је расло што је довело до идеје о успостављању Народног музеја. Као
            званичан датум оснивања Народног музеја узима се 10. мај 1844. године
            када је Јован Стерија Поповић начелник Попечитељства Просвешченија
            потписао акт односно налог окружним начелствима да прикупљају старине
            за &quot;Народни музеум&quot; при већ постојећој Народној библиотеци.
        </item>
    </string-array>
    <string-array name="room1Page1Images">
        <item>sarl_monteskje</item>
        <item>deni_didro</item>
        <item>fransoa_volter</item>
        <item>zan_zak_ruso</item>
        <item>dogadjaji_u_evropi</item>
    </string-array>
    <string-array name="room1Page1ImagesTitles">
        <item>Шарл Монтескје</item>
        <item>Дени Дидро</item>
        <item>Франсоа Волтер</item>
        <item>Жан Жак Русо</item>
        <item>Слобода предводи народ</item>
    </string-array>
    <string-array name="room1Page2Images">
        <item>narodno_pozoriste</item>
        <item>narodni_muzej</item>
        <item>karadjordje</item>
        <item>prvi_srpski_ustanak</item>
    </string-array>
    <string-array name="room1Page2ImagesTitles">
        <item>Народно позориште</item>
        <item>Народни муѕеј</item>
        <item>Ђорђе Петровић Карађорђе</item>
        <item>Први српски устанак</item>
    </string-array>
    <string-array name="room1Page3Images">
    </string-array>
    <string-array name="room1Page3ImagesTitles">
    </string-array>
    <string name="room2page1Title" translatable="false">ЗГРАДА МУЗЕЈА И ВЕЛИКА ШКОЛА</string>
    <string name="room2page4Title" translatable="false">Велика школа </string>
    <string name="room2page5Title" translatable="false">Говор Доситеја Обрадовића при отварању Велике школе у Београду 1808. године:</string>
</resources>